<resources>
    <string name="app_name">TimeWise</string>
    <string name="Home">Home</string>
    <string name="Profile">Profile</string>
    <string name="Settings">Settings</string>
    <string name="Calendar">Calendar</string>
    <string name="Logs">Logs</string>
    <string name="Help">Help</string>
    <string name="Logout">Logout</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>
    <string name="Stats">Statistics</string>
    <string name="Category">Category</string>
    <string name="Categories">Categories</string>
    <string name="TimeSheet">Time Sheet</string>
    <string name="TimeSheets">Time Sheets</string>
    <string name="Cr">Creating </string>
    <string name="CreateTS">New Sheet</string>
    <string name="newCat">New Category</string>
    <string name="catPro">Enter New Category Name</string>
    <string name="CategoryDash">Categories - This Week</string>
    <string name="TimeSheetDash">Time Sheets - This Week</string>
    <string name="Dashboard">Dashboard</string>
    <string name="ThisWeek">This Week</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="AllTime">All Time</string>
    <string name="All">All</string>
    <string name="hours">Hours</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="comPassword">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >7 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open">Open</string>
    <string name="create">Create</string>
    <string name="close">Close</string>
    <string name="date">Date</string>
    <string name="dateR">Date Range</string>
    <string name="picture">Picture</string>
    <string name="pictureOP">Picture (Optional)</string>
    <string name="des">Description</string>
    <string name="username">Username</string>
    <string name="job">Job</string>
    <string name="maxH">Max Daily Hours</string>
    <string name="minH">Min Daily Hours</string>
    <string name="accH">Already have an account!</string>
    <string name="poor">Poor</string>
    <string name="weak">Weak</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>

    <string name="start">Start</string>
    <string name="end">End</string>


    <!--    Error Messages-->
    <string name="error_numbers">Only Numbers Allowed</string>
    <string name="error_select">Please Select A</string>
    <string name="error_input">Please Enter </string>
    <string name="error_impossible">Impossible Value Entered</string>
    <string name="error_letters">Only Letters Allowed</string>
    <string name="error_fix">Please Fix Values</string>
    <string name="error_Cat">Please Create a Category First</string>
    <string name="error_idk">IDK What You Did,Well Done For Break This App</string>

    <!--    Fragments-->
    <string name="nav_profile">nav_profile</string>
    <string name="nav_home">nav_home</string>
    <string name="nav_dashboard">nav_dashboard</string>
    <string name="nav_category">nav_category</string>
    <string name="nav_logs">nav_logs</string>
    <string name="nav_calendar">nav_calendar</string>
    <string name="nav_stats">nav_stats</string>
    <string name="nav_help">nav_help</string>
    <string name="no_results_found">No Results Found</string>
    <string name="add_sheet">Add Sheet</string>
    <string name="goals_this_month">Goals - Last 30 Days</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="average_hours">Average Hours</string>
    <string name="min_hours">Min Hours</string>
    <string name="max_hours">Max Hours</string>
    <string name="latest_timesheets">Latest Timesheets</string>
    <string name="export_all_sheets">Export All Sheets</string>
    <string name="name_place_holder">Name Place Holder</string>
    <string name="email_placeholderr">Email Placeholderr</string>
    <string name="no_values">No Values Given</string>
    <string name="exists">Already Exists</string>
    <string name="saved">Saved</string>
    <string name="whole_number">Please ensure hours is a whole number</string>
    <string name="day_mode">Day Mode</string>
    <string name="night_mode">Night Mode</string>
    <string name="calendar">Calendar</string>
    <string name="graph">Graph</string>
    <string name="total_hours">Total Hours For Each Day</string>
    <string name="th">Total Hours</string>
    <string name="date_error">Start Date Cannot Be After End Date</string>
    <string name="enter_date">Enter Date</string>


</resources>
