<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateTs"
    android:background="?attr/backgroundColor">

<!--    TODO: add validation to the textfields-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateTS"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:autoSizeMaxTextSize="68dp"
        android:autoSizeMinTextSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="100dp"
        android:paddingStart="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DateLay"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:hint="@string/date"
        app:startIconDrawable="@drawable/vector_calendar_month">

            <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/DateField"
            android:inputType="date"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CateLay"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Category"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:startIconDrawable="@drawable/vector_category">


            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/CatField"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PictureLay"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:hint="@string/picture"
            app:startIconDrawable="@drawable/vector_add_photo">

            <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ImageField"
            android:src="@drawable/vector_add"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/HourLay"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hours"
            app:startIconDrawable="@drawable/vector_access_time_filled">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/HoursField"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/Cr"
        android:text="@string/Save"
        app:icon="@drawable/vector_check"/>

</FrameLayout>