<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor"
    tools:context=".fragments.TimeSheetFragment"
    android:scrollbars="none">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:paddingStart="20dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            style="?attr/materialButtonToggleGroupStyle"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center|top"
            android:layout_height="wrap_content"
            app:checkedButton="@id/TSWeek"
            android:paddingEnd="20dp">
            <Button
                style="?attr/materialButtonStyle"
                android:id="@+id/TSWeek"
                android:layout_height="wrap_content"
                android:text="@string/Week"
                android:layout_width="match_parent"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="@color/yellow" />

            <Button
                style="?attr/materialButtonStyle"
                android:id="@+id/TSMonth"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/Month"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="@color/white"/>
            <Button
                style="?attr/materialButtonStyle"
                android:id="@+id/TSAll"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/All"
                android:backgroundTint="?attr/colorPrimary"
                android:textColor="@color/white"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>

<!-- Week,Month,All time -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:scrollbars="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timesheet_recycler_timesheet"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:layout_marginBottom="20dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="true"/>



        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:showAnimationBehavior="inward"
        app:hideAnimationBehavior="inward"
        android:elevation="1dp"
        android:indeterminate="true"
        app:indicatorColor="?attr/colorSecondary"
        app:indicatorSize="150dp"
        app:trackThickness="20dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab"
        app:backgroundTint="?attr/colorSecondary"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/Cr"
        android:text="@string/CreateTS"
        app:icon="@drawable/vector_create"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fab_ex"
        app:backgroundTint="?attr/colorSecondary"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="top|end"
        android:contentDescription="@string/Cr"
        android:text="@string/export_all_sheets"
        app:icon="@drawable/vector_export"/>

    <TextView
        android:id="@+id/no_results"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:elevation="1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginBottom="30dp"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:text="@string/no_results_found"/>


</FrameLayout>