<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DashboardFragment"
    android:background="?attr/backgroundColor"
    android:fadeScrollbars="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Dashboard"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:autoSizeMaxTextSize="68dp"
        android:autoSizeMinTextSize="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:orientation="vertical"
        android:paddingStart="20dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/TimeSheetDash"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dashboard_recycler_timesheet"
            android:paddingTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:textSize="30dp"
            android:textStyle="bold"
            android:text="@string/CategoryDash"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:id="@+id/dashboard_recycler_category"/>
    </LinearLayout>
</FrameLayout>