<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:maxHeight="100dp"
    android:minHeight="30dp"
    android:elevation="8dp"
    android:id="@+id/timesheet_card_item"
    app:cardCornerRadius="15dp"
    android:backgroundTint="?attr/colorPrimaryVariant"
    style="?attr/materialCardViewElevatedStyle"
    android:foreground="?selectableItemBackground"
    android:clickable="true">
    <!-- TODO: Find a color that workd for both or establish one -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="80dp"
                android:minHeight="30dp"
                android:layout_height="wrap_content"
                android:maxHeight="140dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/TSpicture"
                android:contentDescription="@string/Profile"/>

            <LinearLayout
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/TSdate"
                        android:layout_width="130dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="26dp"
                        android:text="@string/date" />

                    <TextView
                        android:id="@+id/TScategory"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:textSize="20dp"
                        android:text="@string/Category"
                        android:layout_marginTop="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp">

                    <TextView
                        android:id="@+id/TShours"
                        android:layout_width="280dp"
                        android:layout_height="30dp"
                        android:textSize="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:paddingEnd="70dp"
                        android:text="@string/hours" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TSdescription"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:maxHeight="60dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/des"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>