<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/backgroundColor"
    tools:context=".fragments.CategoryFragment"
    android:scrollbars="none">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:textAlignment="center"
        android:textSize="40dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:autoSizeMaxTextSize="68dp"
        android:autoSizeMinTextSize="20dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:orientation="vertical"
        android:paddingStart="20dp">



        <!-- TODO: Decide whether to have another drop down small banner for set time selection -->
        <!-- Week,Month,All time -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:scrollbars="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:id="@+id/category_recycler_category"
                android:paddingTop="20dp"
                android:scrollbars="vertical"/>



        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="1dp"
        android:indeterminate="true"
        app:indicatorColor="?attr/colorOnPrimary"
        app:indicatorSize="150dp"
        app:trackThickness="10dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_fabCat"
        app:backgroundTint="?attr/colorSecondary"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/Cr"
        android:text="@string/newCat"
        app:icon="@drawable/vector_add"/>


</FrameLayout>